--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
         <java.version>1.8</java.version>
         <druid.version>1.1.21</druid.version>
         <mysql.version>8.0.18</mysql.version>
+        <junit.version>4.12</junit.version>
+        <mybatis.version>2.1.0</mybatis.version>
+        <tk.mybatis.version>4.0.0</tk.mybatis.version>
+        <pagehelper.version>1.2.3</pagehelper.version>
     </properties>
 
     <dependencies>
@@ -42,6 +46,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!--druid alibaba begin-->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -61,36 +71,54 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <!-- mysql end-->
+        <!--mybatis begin-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>${tk.mybatis.version}</version>
+        </dependency>
+        <!--分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${pagehelper.version}</version>
+        </dependency>
+        <!--mybatis end-->
     </dependencies>
-    <profiles>
-        <profile>
-            <!-- 本地开发环境 -->
-            <id>dev</id>
-            <properties>
-                <environment>dev</environment>
-            </properties>
-            <activation>
-                <!-- 设置默认激活这个配置 -->
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
-        <profile>
-            <!-- 发布环境 -->
-            <id>release</id>
-            <properties>
-                <environment>release</environment>
-            </properties>
+<!--    <profiles>-->
+<!--        <profile>-->
+<!--            &lt;!&ndash; 本地开发环境 &ndash;&gt;-->
+<!--            <id>dev</id>-->
+<!--            <properties>-->
+<!--                <environment>dev</environment>-->
+<!--            </properties>-->
+<!--            <activation>-->
+<!--                &lt;!&ndash; 设置默认激活这个配置 &ndash;&gt;-->
+<!--                <activeByDefault>true</activeByDefault>-->
+<!--            </activation>-->
+<!--        </profile>-->
+<!--        <profile>-->
+<!--            &lt;!&ndash; 发布环境 &ndash;&gt;-->
+<!--            <id>release</id>-->
+<!--            <properties>-->
+<!--                <environment>release</environment>-->
+<!--            </properties>-->
 
-        </profile>
-        <profile>
-            <!-- 测试环境 -->
-            <id>test</id>
-            <properties>
-                <environment>test</environment>
-            </properties>
+<!--        </profile>-->
+<!--        <profile>-->
+<!--            &lt;!&ndash; 测试环境 &ndash;&gt;-->
+<!--            <id>test</id>-->
+<!--            <properties>-->
+<!--                <environment>test</environment>-->
+<!--            </properties>-->
 
-        </profile>
-    </profiles>
+<!--        </profile>-->
+<!--    </profiles>-->
     <build>
         <plugins>
             <plugin>
@@ -104,6 +132,29 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <!-- mybatis代码生成插件 -->
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.6</version>
+                <configuration>
+                    <configurationFile>${basedir}/src/main/resources/generator/generatorConfig.xml</configurationFile>
+                    <overwrite>false</overwrite>
+                    <verbose>true</verbose>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>${mysql.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>tk.mybatis</groupId>
+                        <artifactId>mapper</artifactId>
+                        <version>${tk.mybatis.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
